--- a/index.html
+++ b/index.html
@@ -6,10 +6,8 @@
     <title>QRコードベースのARデモ</title>
     <link rel="stylesheet" type="text/css" href="stylesheet.css">
     <script src="https://aframe.io/releases/1.2.0/aframe.min.js"></script>
-    <!-- MindARの画像認識用スクリプト -->
-    <script src="https://cdn.jsdelivr.net/npm/mind-ar-js/dist/mindar-image.prod.js"></script>
-    <!-- A-FrameとMindARを組み合わせたスクリプト -->
-    <script src="https://cdn.jsdelivr.net/npm/mind-ar-js/dist/mindar-image-aframe.prod.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/mind-ar-js@v1.2.5/dist/mindar-image.prod.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/mind-ar-js@v1.2.5/dist/mindar-image-aframe.prod.js"></script>
 </head>
 <body>
 
