--- a/index.html
+++ b/index.html
@@ -4,23 +4,23 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>QRコードベースのARデモ</title>
-    <link rel="stylesheet" type="text/css" href="stylesheet.css">
-    <script src="https://aframe.io/releases/1.2.0/aframe.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/mind-ar-js@v1.2.5/dist/mindar-image.prod.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/mind-ar-js@v1.2.5/dist/mindar-image-aframe.prod.js"></script>
+    <link rel="stylesheet" type="text/css" href="css/stylesheet.css">
+    <script src="js/aframe.min.js"></script>
+    <script src="js/mindar-image.prod.js"></script>
+    <script src="js/mindar-image-aframe.prod.js"></script>
 </head>
 <body>
 
 <header>
-    <a href="javascript:location.reload();"><img src="reset-icon.png" alt="リセット" class="reset-icon"></a>
+    <a href="javascript:location.reload();"><img src="assets/images/reset-icon.png" alt="リセット" class="reset-icon"></a>
 </header>
 
 <main>
     <!-- ARコンテンツ -->
-    <a-scene mindar-image="imageTargetSrc: your-targets.mind" embedded color-space="sRGB" renderer="colorManagement: true, physicallyCorrectLights" vr-mode-ui="enabled: false" device-orientation-permission-ui="enabled: false">
+    <a-scene mindar-image="imageTargetSrc: targets/your-targets.mind" embedded color-space="sRGB" renderer="colorManagement: true, physicallyCorrectLights" vr-mode-ui="enabled: false" device-orientation-permission-ui="enabled: false">
         <a-assets>
-            <img id="target-image" src="your-target-image.jpg">
-            <a-asset-item id="model_glb" src="toryon3.glb"></a-asset-item>
+            <img id="target-image" src="assets/images/your-target-image.jpg">
+            <a-asset-item id="model_glb" src="assets/models/toryon3.glb"></a-asset-item>
         </a-assets>
 
         <a-entity mindar-image-target="targetIndex: 0">
