--- a/index.html
+++ b/index.html
@@ -5,9 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>画像認識ベースのARデモ</title>
     <!-- ローカルのJavaScriptファイルへのリンク -->
-    <script src="js/aframe.min.js"></script>
-    <script src="js/mindar-image.prod.js"></script>
-    <script src="js/mindar-image-aframe.prod.js"></script>
+   <script src="https://aframe.io/releases/1.5.0/aframe.min.js"></script>
+   <script src="https://cdn.jsdelivr.net/npm/mind-ar@1.2.5/dist/mindar-image-aframe.prod.js"></script>
 </head>
 <body>
 
@@ -19,9 +18,12 @@
 </header>
 
 <!-- ARシーンを定義 -->
-<a-scene id='myAscene' mindar-image="imageTargetSrc: targets/your-targets.mind" embedded color-space='sRGB' 
-         renderer='colorManagement: true, physicallyCorrectLights' 
-         vr-mode-ui='enabled: false' device-orientation-permission-ui='enabled: false'>
+    <a-scene mindar-image="imageTargetSrc: https://cdn.jsdelivr.net/gh/hiukim/mind-ar-js@1.2.1/examples/image-tracking/assets/card-example/card.mind;" vr-mode-ui="enabled: false" device-orientation-permission-ui="enabled: false">
+　  <a-camera position="0 0 0" look-controls="enabled: false"></a-camera>
+    <a-entity mindar-image-target="targetIndex: 0">
+    <a-plane color="blue" position="0 0 0" height="0.552" width="1" rotation="0 0 0"></a-plane>
+    </a-entity>
+    </a-scene>
     
     <!-- アセット定義 -->
     <a-assets>
