--- a/index.html
+++ b/index.html
@@ -18,23 +18,15 @@
 </header>
 
 <!-- ARシーンを定義 -->
-    <a-scene mindar-image="imageTargetSrc: https://cdn.jsdelivr.net/gh/hiukim/mind-ar-js@1.2.1/examples/image-tracking/assets/card-example/card.mind;" vr-mode-ui="enabled: false" device-orientation-permission-ui="enabled: false">
-　  <a-camera position="0 0 0" look-controls="enabled: false"></a-camera>
-    <a-entity mindar-image-target="targetIndex: 0">
-    <a-plane color="blue" position="0 0 0" height="0.552" width="1" rotation="0 0 0"></a-plane>
-    </a-entity>
+ <a-scene mindar-image="imageTargetSrc: targets.mind;" vr-mode-ui="enabled: false" device-orientation-permission-ui="enabled: false" color-space="sRGB" renderer="colorManagement: true, physicallyCorrectLights">
+      <a-assets>
+        <a-asset-item id="greif" src="greif.glb"></a-asset-item>
+      </a-assets>
+      <a-camera position="0 0 0" look-controls="enabled: false"></a-camera>
+      <a-entity mindar-image-target="targetIndex: 0">
+        <a-gltf-model rotation="90 0 0" position="0 0 0" src="#greif">
+      </a-entity>
     </a-scene>
-    
-    <!-- アセット定義 -->
-    <a-assets>
-        <a-asset-item id='01_mame' src='assets/models/toryon3.glb'></a-asset-item>
-    </a-assets>
-    
-    <!-- 画像認識ターゲットと3Dモデル -->
-    <a-entity mindar-image-target='targetIndex: 0'>
-        <a-entity gltf-model='#01_mame' position='0 0 -1' scale='10 10 10'></a-entity>
-    </a-entity>
-</a-scene>
 
 </body>
 </html>
